Avoid Java 9 Map factory in JWT service